# codex-memory-harness

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  install.bat  install.ps1  install.sh  pyproject.toml  uninstall.bat  uninstall.ps1  uninstall.sh
docs/: AI_DIAGNOSTIC_LOGGING.md  AUTOMATED_MEMORY_MINING.md  CODEX_OFFICIAL_ALIGNMENT.md  EXTERNAL_BENCHMARK.md  FULL_DEVELOPMENT_WORKFLOW.md  GAME_CLIENT_WORKFLOW.md  GAME_REQUIREMENTS_GATE.md  GROUNDED_FACT_WORKFLOW.md  LLM_AGENT_MEMORY_HANDBOOK.md  MEMORY_LAYERING.md  MEMORY_RETRIEVAL_STRATEGY.md  OFFICIAL_CODEX_MEMORY_COMPATIBILITY.md  PRIVACY.md  REVIEW_GATE_OPTIMIZATION.md  SESSION_WORKTREE_BINDING.md  SKILL_ROUTING_AND_DEFAULT_GOVERNANCE.md  SUBAGENT_WORKFLOW.md  USER_GUIDE.md  WORKSPACE_ADAPTIVE_ROUTING.md  WORKSPACE_ROUTING_MIGRATION.md  WORKSPACE_ROUTING_TASK_LIST.md  codex-memory-harness-system-summary.md  codex-memory-plugin-execution-plan.md  codex-memory-plugin-task-list.md
openspec/: config.yaml  project.md
plans/: standalone-migration-task-list.md
schemas/: shared_memory.schema.json  subagent_dispatch_plan.schema.json  subagent_route_binding.schema.json  verification_aggregation.schema.json  workspace_project_inventory.schema.json  workspace_route_plan.schema.json  workspace_routing_config.schema.json
scripts/: build_release.py  profile_unittest_durations.py  run_unittest_modules.py  verify_grounded_docs.py  verify_project.py  version_manager.py
tests/: git_repo_template.py  review_workflow_helpers.py  test_api_authority_router.py  test_api_authority_router_paths.py  test_eval_replay.py  (+65 more)
(+253 files in other folders)
